Missing Structure+function in chaper 6; interpretation of results in chapter 4.2, and change "life course saliences" in chapter 3 figures

--- a/head/abstracts.tex
+++ b/head/abstracts.tex
@@ -18,7 +18,7 @@ Preterm birth is a major risk factor for neurodevelopment impairments often only
 
 \hspace{1cm} This thesis explores the dynamic nature of brain function in preterm-born adolescents in three steps: First, we investigate changes in spontaneous brain activity over time using a resting-state paradigm. Here, we study how the variability of the blood oxygenation level dependent signal (BOLD), a measure previously linked to cognitive performance, develops in a preterm- and a term-born groups. We find preterm participants show an altered trajectory of BOLD variability development during early adolescence. We also show that the dynamic patterns of co-activation with the dorsal anterior cingulate cortex (ACC), a key node of the salience network, also develop differently between the preterm and control groups. Secondly, we examine task-driven changes in brain activation. To this end, we select a reality filtering task known to engage the orbitofrontal cortex (OFC), a region that is particularly vulnerable in the preterm. We find that, although the preterm group is able to perform the task successfully, OFC activation is significantly higher in the control participants. Finally, inspired by the successful field of dynamic functional connectivity which has mainly flourished in resting-state paradigms, we develop a novel method to look into task-driven modulations of brain connectivity in a time-resolved way. We then apply this new approach to a third data set involving a movie watching and emotion regulation task. We find several subtle but significant seed; task; and group effects that characterise each of the dynamic co-activation patterns.  
 
-\hspace{1cm} In short, we introduce a method for time-resolved evaluation of task-driven changes in brain connectivity and provide evidence of altered development of brain dynamics in preterm-born young adolescents. Our results thus highlight the importance of considering the dynamic aspects of brain function when studying clinical populations.
+\hspace{1cm} In short, we introduce a method for time-resolved evaluation of task-driven changes in brain connectivity and provide evidence of altered brain dynamics in preterm-born young adolescents. Our results thus highlight the importance of considering the dynamic aspects of brain function when studying clinical populations.
 
 \vspace{0.5cm}
 
@@ -33,12 +33,12 @@ Preterm birth is a major risk factor for neurodevelopment impairments often only
 \markboth{Résumé}{Résumé}
 % put your text here
 
-La naissance prématurée est un facteur de risque majeur de troubles du développement neurologique qui souvent n'apparaissent que plus tard dans la vie. Le cerveau est encore en plein développement à l'adolescence, ce qui en fait une fenêtre d'intervention prometteuse. Il est donc crucial de comprendre les mécanismes de la fonction cérébrale altérée dans cette population. Le but de cette thèse était d'étudier comment le cerveau reconfigure dynamiquement sa propre organisation au fil du temps chez les jeunes adolescents nés avant terme. À ce jour, les recherches ont principalement porté sur les perturbations structurelles ou sur les caractéristiques statiques de la fonction cérébrale dans cette population. Cependant, des études récentes ont montré que l'activité cérébrale est très dynamique à la fois spontanément et pendant l'exécution d'une tâche, et que de petites perturbations de cette architecture complexe peuvent interférer avec le comportement normal et les capacités cognitives.
+La naissance prématurée est un facteur de risque majeur de troubles du développement neurologique, qui souvent n'apparaissent que plus tard dans la vie. À l'adolescence, le cerveau est encore en plein développement, ce qui en fait une fenêtre d'intervention prometteuse. Il est donc crucial de comprendre les mécanismes de la fonction cérébrale altérée dans cette population. Le but de cette thèse est d'étudier comment le cerveau reconfigure dynamiquement sa propre organisation au fil du temps chez les jeunes adolescents nés avant terme. À ce jour, les recherches ont principalement porté sur les perturbations structurelles ou sur les caractéristiques statiques de la fonction cérébrale dans cette population. Cependant, des études récentes ont montré que l'activité cérébrale est très dynamique, à la fois spontanément et pendant l'exécution d'une tâche, et que de petites perturbations de cette architecture complexe peuvent interférer avec le comportement normal et les capacités cognitives.
 
 
-\hspace{1cm}Cette thèse explore la nature dynamique de la fonction cérébrale chez les adolescentes prématurées en trois étapes: Premièrement, nous étudions les changements dans l'activité cérébrale spontanée au fil du temps en utilisant un paradigme de l'état de repos. Ici, nous étudions comment la variabilité du signal dépendant du niveau d'oxygénation sanguin (BOLD), une mesure auparavant liée aux performances cognitives, se développe dans un groupe prématuré et un né à terme. Nous constatons que les participants prématurés montrent une trajectoire modifiée du développement de la variabilité BOLD au début de l'adolescence. Nous montrons également que les modèles dynamiques de co-activation avec le cortex cingulaire antérieur dorsal (ACC), un nœud clé du réseau de saillance, se développent également différemment entre les groupes prématuré et terme. Deuxièmement, nous examinons les changements entraînés par les tâches dans l'activation cérébrale. À cette fin, nous sélectionnons une tâche de filtrage de la réalité connue pour engager le cortex orbitofrontal (OFC), une région particulièrement vulnérable chez le prématuré. Nous constatons que, bien que le groupe prématuré soit en mesure d'effectuer la tâche avec succès, l'activation de l'OFC est significativement plus élevée chez les participants nés à terme. Enfin, inspirés par le domaine réussi de la connectivité fonctionnelle dynamique qui a principalement prospéré dans les paradigmes de l'état de repos, nous développons une nouvelle méthode pour étudier les modulations de connectivité cérébrale basées sur les tâches d'une manière résolue en temps. Nous appliquons ensuite cette nouvelle approche à un troisième ensemble de données impliquant une tâche de visionnage de films et de régulation des émotions. Nous trouvons plusieurs effets subtiles mais significatives de seed; tâche; et des effets de groupe qui caractérisent chacun des modèles de co-activation dynamique.
+\hspace{1cm}Cette thèse explore la nature dynamique de la fonction cérébrale chez les adolescents prématurés en trois étapes: premièrement, nous analysons les changements dans l'activité cérébrale spontanée au fil du temps, à l'état de repos. Ici, nous étudions comment la variabilité du signal dépendant du niveau d'oxygénation sanguin (BOLD), une mesure auparavant liée aux performances cognitives, se développe dans un groupe prématuré et un groupe né à terme. Nous constatons que la trajectoire de développement de la variabilité BOLD est modifiée chez les participants prématurés au début de l'adolescence. Nous montrons aussi que les modèles dynamiques de co-activation avec le cortex cingulaire antérieur dorsal (ACC), un nœud clé du réseau de saillance, se développent également différemment entre le groupe prématuré et le groupe nà à terme. Deuxièmement, nous examinons les changements provoqués par les tâches dans l'activation cérébrale. À cette fin, nous sélectionnons une tâche de filtrage de la réalité connue pour engager le cortex orbitofrontal (OFC), une région particulièrement vulnérable chez le prématuré. Nous constatons que, bien que le groupe prématuré soit en mesure d'effectuer la tâche avec succès, l'activation de l'OFC est significativement plus élevée chez les participants nés à terme. Enfin, inspirés par le domaine prometteur de la connectivité fonctionnelle dynamique qui a principalement prospéré dans des expériences faites à l'état de repos, nous développons une nouvelle méthode pour étudier les modulations de connectivité cérébrale induites par une tâche d'une manière résolue dans le temps. Nous appliquons ensuite cette nouvelle approche à un troisième ensemble de données impliquant une tâche de visionnage de films et de régulation des émotions. Nous trouvons plusieurs effets subtiles mais significatifs de seed, de tâche, et de groupe qui caractérisent chacun des modèles de co-activation dynamique.
 
-\hspace{1cm}En bref, nous introduisons une méthode d'évaluation résolue en temps des changements liés à la tâche dans la connectivité cérébrale et fournissons des preuves d'un développement altéré de la dynamique cérébrale chez les jeunes adolescents prématurés. Nos résultats mettent ainsi en évidence l'importance de considérer les aspects dynamiques de la fonction cérébrale lors de l'étude des populations cliniques.
+\hspace{1cm}En bref, nous introduisons une méthode d'évaluation résoluee dans le temps des changements de connectivité cérébrale liés à une tâche, et nous fournissons des preuves d'un développement altéré de la dynamique cérébrale chez les jeunes adolescents prématurés. Nos résultats mettent ainsi en évidence l'importance de considérer les aspects dynamiques de la fonction cérébrale lors de l'étude des populations cliniques.
 
 
 \vspace{0.5cm}
