--- a/main/ch6_FuturePerspectives.tex
+++ b/main/ch6_FuturePerspectives.tex
@@ -80,3 +80,5 @@ To the best of our knowledge, all the research involving graph analyses on prete
 
 A pressing issue in the study of the neurodevelopmental effects of preterm birth is that, although most of the global burden of preterm birth is shouldered by low- and middle-income countries (LMICs), only a tiny portion of the currently available research evidence for their prevention and treatment come from these settings \citep{Smid2016}. However, since high-income countries tend to offer more funding for research and in many cases have better facilities at researchers' disposal, investigations in these regions of potential biomarkers for targeted intervention that improves clinical outcomes in this population are also of utmost importance. Once non-invasive interventions such as the ones the \textit{Building the Path to Resilience in Preterm-Born Infants} project --- of which this thesis is a constituting part --- investigates are found, the need for expensive equipment such as MRI machines will become less essential, and LMIC populations will also benefit from them.  
 % https://www.who.int/news-room/fact-sheets/detail/preterm-birth
+
+\clearpage
