--- a/tail/appendix.tex
+++ b/tail/appendix.tex
@@ -25,6 +25,15 @@
 \end{figure*}
 
 
+\begin{figure*}[h]
+\centering
+\includegraphics[width=0.8\textwidth]{images/Appendix/Correlation_GA_Age.png}
+\caption{\textbf{Correlation between gestational age and age at assessment.} There was no significant correlation between the two measures in the control group ($r = -0.22$, \textit{n.s.}). There as a weak correlation between the two measures in the preterm group ($r = -0.4$, $p = 0.02$).  }
+\label{fig:ch3_GAvsAge}
+\end{figure*}
+
+
+
 \chapter{Supplementary material for Chapter \ref{chapter:ch5}} \label{appA}
 
 \renewcommand{\theequation}{Eq. \thechapter.\arabic{equation}}
