--- a/main/ch3_BOLDvar.tex
+++ b/main/ch3_BOLDvar.tex
@@ -12,7 +12,7 @@ To the best of my knowledge, at the time of this publication no one has investig
 \section{Journal Article: Altered BOLD variability and whole-brain dynamics development in preterm-born young adolescents} \label{section:ch3_BOLDvar_paper}
 
 \begin{center}
- \textit{(Preprint of article to be submitted to NeuroImage)}\add{Check author list}
+ \textit{(Preprint of article to be submitted to NeuroImage)}
  
 Lorena G. A. Freitas\textsuperscript{a,b,c}, 
 Vanessa Siffredi\textsuperscript{a,c}, 
@@ -47,7 +47,7 @@ Preterm birth is one of the leading causes for neurodevelopmental complications 
       Partial least squares correlation (PLSC; \citeauthor{McIntosh2004}, \citeyear{McIntosh2004}; \citeauthor{Krishnan2011}, \citeyear{Krishnan2011})  is an effective approach to identify relationships between different sources of data, and has become increasingly popular as a method to reveal links between brain and clinical measures. For instance, it has been used to predict clinical outcomes of Depression from resting-state FC \citep{Yoshida2017}; to investigate risk factors for psychosis in 21q11DS patients from dFC features \citep{Zoller2019}; to identify the neurocorrelates of impulsivity in ADHD patients \citep{Barker2019}; among others. \cite{Easson2019} recently showed, using PLSC, that BOLD signal variability in certain brain regions correlated negatively with symptom severity in children and adolescents with ASD. In a similar study, \citep{Nomi2018} revealed that brain signal variability in medial prefrontal areas comprising the default mode network was positively correlated with inattention and symptoms of ADHD. These studies have demonstrated the relevance of PLSC to expose relationships between brain function and clinical measures. Importantly, PLSC has a critical advantage over typical voxelwise brain analyses that use mass-univariate methods in that it it does not assume independence between the voxels, making it more aligned with brain function and with the data itself, since neighbouring voxels are smoothed as a preprocessing step. Also as a consequence of being a multivariate approach, PLSC is less affected by the problem of multiple comparisons. 
       
   
-     The teenage years are a critical period for brain development. During adolescence, functional connections across the brain become more robust \citep{Power2010}, and the coordination between networks becomes more dynamic during task performance \citep{Hutchison2015} and at rest \citep{Marusak2017, Faghiri2018}. Thus, diving into the subtleties of the dynamic features of brain function at this age has great potential to improve our understanding of the effects of preterm birth in neurodevelopment. In this work, we employ PLSC analysis to characterise links between brain function and age in preterm-born young adolescents compared to full-term controls. First, we investigate the relationship between BOLD signal variability and gestational age, age at assessment and an interaction between the two. Since it has been found to be linked to cognition and development, and given that preterm-born children miss the third trimester in utero when cortical folding develops more rapidly, we hypothesise that BOLD variability is widely altered in this population. Finally, we explore how dynamic functional connectivity, measured by co-activation patterns, relates to the same environmental measures. 
+     The teenage years are a critical period for brain development. During adolescence, functional connections across the brain become more robust \citep{Power2010}, and the coordination between networks becomes more dynamic during task performance \citep{Hutchison2015} and at rest \citep{Marusak2017, Faghiri2018}. Thus, diving into the subtleties of the dynamic features of brain function at this age has great potential to improve our understanding of the effects of preterm birth in neurodevelopment. In this work, we employ PLSC analysis to characterise links between brain function and age in preterm-born young adolescents compared to full-term controls. First, we investigate the relationship between BOLD signal variability and life course measures, namely gestational age; age at assessment; and an interaction between the two. Since it has been found to be linked to cognition and development, and given that preterm-born children miss the third trimester in utero when cortical folding develops more rapidly, we hypothesise that BOLD variability is widely altered in this population. Finally, we explore how dynamic functional connectivity, measured by co-activation patterns, relates to the same life course measures. 
 
 
 
@@ -88,12 +88,12 @@ Finally, we calculated occurrence metrics for each CAP such as number of entries
 
 \subsubsection{Partial least squares correlation (PLSC) analysis}
 
- To reveal and quantify the strength of the relationship between brain measures and environmental measures, we applied partial least squares correlation analysis \citep{McIntosh2004, Krishnan2011}. We thus included either BOLD variability maps or CAP metrics as brain measures in separate analyses and, in both cases, we included Gestational Age (GA), age and an interaction between then two as environment measures. Before applying PLSC, all environment variables and voxelwise BOLD variability maps were z-scored across subjects \citep{Krishnan2011}. The toolbox used for the PLSC analyses is openly available at \href{https://github.com/danizoeller/myPLS}{https://github.com/danizoeller/myPLS}.
+ To reveal and quantify the strength of the relationship between brain measures and life course measures, we applied partial least squares correlation analysis \citep{McIntosh2004, Krishnan2011}. We thus included either BOLD variability maps or CAP metrics as brain measures in separate analyses and, in both cases, we included Gestational Age (GA), age at assessment and an interaction between then two as life course measures. Before applying PLSC, all life course variables and voxelwise BOLD variability maps were z-scored across subjects \citep{Krishnan2011}. The toolbox used for the PLSC analyses is openly available at \href{https://github.com/danizoeller/myPLS}{https://github.com/danizoeller/myPLS}.
 
 
-PLSC analysis starts by computing the group-wise correlation \textbf{R} between the matrix of brain measures per subject, \textbf{X}, and the matrix of design variables per subject, \textbf{Y}. Since these data are z-scored (centred and normalised), this corresponds to the cross-product \textbf{R}~=~$\textbf{X}^{T}\textbf{Y}$. The group-wise cross-covariance matrices are subsequently stacked. \textbf{R} is then factorised via singular value decomposition into three matrices \textbf{U}\textbf{S}$\textbf{V}^{T}$ to produce latent components (LCs) that capture relationships between brain and clinical data. Each LC is thus associated with a vector of design saliences (or ``weights") in \textbf{U}, a vector of brain saliences in \textbf{V}, and a corresponding singular value in \textbf{S}, which indicates the amount of correlation that is explained by that pair of salience vectors. The aim of PLSC is thus to yield pairs of latent vectors in \textbf{U} and \textbf{V} with maximal covariance. Each value in a salience vector indicates how strongly the corresponding measure contributes to the correlation between brain and clinical measures that this LC explains. By projecting each subject's original (brain or clinical) data onto the corresponding salience pattern, we obtained brain ($\textbf{L}_X$~=~\textbf{XV}) and clinical ($\textbf{L}_Y$~=~\textbf{YU}) scores, respectively. Note that \textbf{YU} is computed separately for each group and stacked in $\textbf{L}_Y$. 
+PLSC analysis starts by computing the group-wise correlation \textbf{R} between the matrix of brain measures per subject, \textbf{X}, and the matrix of life course variables per subject, \textbf{Y}. Since these data are z-scored (centred and normalised), this corresponds to the cross-product \textbf{R}~=~$\textbf{X}^{T}\textbf{Y}$. The group-wise cross-covariance matrices are subsequently stacked. \textbf{R} is then factorised via singular value decomposition into three matrices \textbf{U}\textbf{S}$\textbf{V}^{T}$ to produce latent components (LCs) that capture relationships between brain and clinical data. Each LC is thus associated with a vector of life course saliences (or ``weights") in \textbf{U}, a vector of brain saliences in \textbf{V}, and a corresponding singular value in \textbf{S}, which indicates the amount of correlation that is explained by that pair of salience vectors. The aim of PLSC is thus to yield pairs of latent vectors in \textbf{U} and \textbf{V} with maximal covariance. Each value in a salience vector indicates how strongly the corresponding measure contributes to the correlation between brain and life course measures that this LC explains. By projecting each subject's original (brain or life course) data onto the corresponding salience pattern, we obtained brain ($\textbf{L}_X$~=~\textbf{XV}) and clinical ($\textbf{L}_Y$~=~\textbf{YU}) scores, respectively. In other words, each subject's brain score is a weighted average of their brain measures (\textit{e.g.,} BOLD variability within a voxel), where the weights are given by the brain saliences calculated from the PLSC. Note that \textbf{YU} is computed separately for each group and stacked in $\textbf{L}_Y$. 
 
-To test whether the correlation explained by each LC was significant, we performed 1000 permutations of the clinical scores (while keeping grouping intact), and factorised the resulting cross-covariance matrix in each case, to determine the null distribution of singular values. If an LC's singular value was higher than 95\% ($\alpha$~=~0.05) of the null distribution, it was considered significant. For each significant LC, we then performed cross-validation on the brain and clinical saliences to find the elements that contributed significantly to the relationship expressed by that LC. To do this, we created 500 random bootstrap samples obtained by random sampling with replacement on the brain and clinical saliences. By dividing the mean of the bootstrap distribution by its standard deviation we obtain the bootstrap ratio (BSR), which is roughly equivalent to a z-score \citep{McIntosh2004, Krishnan2011}.  For instance in the BOLD variability - environment measures PLSC,  this ratio represents how robustly each voxel contributes to the LC.
+To test whether the correlation explained by each LC was significant, we performed 1000 permutations of the clinical scores (while keeping grouping intact), and factorised the resulting cross-covariance matrix in each case, to determine the null distribution of singular values. If an LC's singular value was higher than 95\% ($\alpha$~=~0.05) of the null distribution, it was considered significant. For each significant LC, we then performed cross-validation on the brain and clinical saliences to find the elements that contributed significantly to the relationship expressed by that LC. To do this, we created 500 random bootstrap samples obtained by random sampling with replacement on the brain and clinical saliences. By dividing the mean of the bootstrap distribution by its standard deviation we obtain the bootstrap ratio (BSR), which is roughly equivalent to a z-score \citep{McIntosh2004, Krishnan2011}.  For instance in the BOLD variability - life course measures PLSC,  this ratio represents how robustly each voxel contributes to the LC.
 
 In the results presented here, we threshold the brain patterns of bootstrap scores at \textit{abs}(BSR)~$>$~3 (when \textit{abs} represents the absolute value), which corresponds approximately to p~$<$~0.001 \citep{Garrett2013}. 
 
@@ -112,14 +112,14 @@ The PLSC analysis of voxelwise BOLD variability yielded one significant LC (p = 
 
 
 \subsubsection*{BOLD variability evolves differently in preterm-born children} 
-Figure \ref{fig:PLS_var} shows the brain and environment saliences for the significant latent component (p~=~0.006) yielded by the PLSC analysis. For fullterm-born children, there was a positive effect of GA and age, as well as an interaction between the two, on BOLD variability. This indicates that, as young adolescents grow older, and the longer they have spent in the womb, the more variability they will present in the regions shown in Figure \ref{fig:PLS_var}B. As for preterm-born children, contrary to their peers, age had a negative effect on BOLD variability, suggesting an altered trajectory for the development of this feature in this group. Moreover, although GA alone had no significant effect on BOLD variability, an interaction between GA and age did have a positive effect, suggesting that in older children, a longer gestation is linked to increased BOLD variability, bringing them closer to fullterm controls. The brain regions most implicated in the relationship uncovered by the significant latent component are shown in  Figure \ref{fig:PLS_var}B with a bootstrap ratio threshold of BSR = 3, which is equivalent to p-values less than 0.001.  In particular, the bilateral hippocampi (Hipp), insulae (Ins), ventral and dorsal anterior cingular cortex (ACC) all have a BSR < 6, which corresponds to a p-value less than 0.00001.
+Figure \ref{fig:PLS_var} shows the brain and life course saliences for the significant latent component (p~=~0.006) yielded by the PLSC analysis. For fullterm-born children, there was a positive effect of GA and age, as well as an interaction between the two, on BOLD variability. This indicates that, as young adolescents grow older, and the longer they have spent in the womb, the more variability they will present in the regions shown in Figure \ref{fig:PLS_var}B. As for preterm-born children, contrary to their peers, age had a negative effect on BOLD variability, suggesting an altered trajectory for the development of this feature in this group. Moreover, although GA alone had no significant effect on BOLD variability, an interaction between GA and age did have a positive effect, suggesting that in older children, a longer gestation is linked to increased BOLD variability, bringing them closer to fullterm controls. The brain regions most implicated in the relationship uncovered by the significant latent component are shown in  Figure \ref{fig:PLS_var}B with a bootstrap ratio threshold of BSR = 3, which is equivalent to p-values less than 0.001.  In particular, the bilateral hippocampi (Hipp), insulae (Ins), ventral and dorsal anterior cingular cortex (ACC) all have a BSR < 6, which corresponds to a p-value less than 0.00001.
 
 
 
 \begin{figure}[h!] 
 \centering\includegraphics[width=1\linewidth]{Ch3/Fig2_PLS_var_LC1_20200205.pdf}
-\caption{\textbf{BOLD variability and its link to environmental measures.} Partial least squares correlation (PLSC) results for BOLD variability and environmental measures for preterm-born young adolescents and full term born controls.  A)~Environment weights for latent component (LC) 1. GA = Gestational Age. Error bars correspond to bootstrapping 5th--95th percentiles. B)~Brain weights for LC 1. Numbers on the top left of each slice correspond to planes in Montreal Neurological Institute coordinates. C)~Correlations between brain scores and age in the two groups. For this plot, brain scores (Lx) were calculated using brain data normalised across all participants (as opposed to within-group), to allow group baselines to be compared. The size of each bubble is proportional to the corresponding subject's gestational age. %an eventual group effect in the baseline (typically ignored by PLS analyses) could have been identified
-}. \label{fig:PLS_var}
+\caption{\textbf{BOLD variability and its link to life course measures.} Partial least squares correlation (PLSC) results for BOLD variability and life course measures for preterm-born young adolescents and fullterm-born controls.  A)~Life course measures' weights for latent component (LC) 1. GA = Gestational Age. Error bars correspond to bootstrapping 5th--95th percentiles. B)~Brain weights for LC 1. Numbers on the top left of each slice correspond to planes in Montreal Neurological Institute coordinates. C)~Correlations between brain scores (subject-wise weighted average of BOLD variability maps, with the Brain Saliences as weights) and age at assessment in the two groups. For this plot, brain scores (Lx) were calculated using brain data normalised across all participants (as opposed to within-group), to allow group baselines to be compared. Each bubble's size is proportional to the corresponding subject's GA. %an eventual group effect in the baseline (typically ignored by PLS analyses) could have been identified
+}. \label{fig:PLS_var} \vspace{-0.5cm}
 \end{figure}
 
 
@@ -141,13 +141,13 @@ Out of the brain areas highlighted in our BOLD variability analysis' results, th
 
 \subsubsection*{No group differences in individual CAP metrics between preterm- and fullterm-born participants} None of the individual CAP metrics we analysed (i.e.,  number of entries; average duration; number of transitions to and from baseline; and total number of occurrences) were significantly different between groups, as compared using two-sample t-tests ($p~>~0.05$, \textit{n.s.}). 
 
-\subsubsection*{Altered trajectories of ACC-CAPs over time in preterm-born young adolescents} We then tested whether there were significant interplays between the six CAPs that were expressed differently between the two groups over time. To this end, we employed a PLSC analysis including the total number of occurrences per CAP and the environmental measures. We found one significant latent component (LC1, $p~=~0.001$) as shown in Figure \ref{fig:PLS_var}. Environment weights for LC1  indicate robust weights of gestational age (GA), age at assessment and an interaction of the two for preterm young adolescents, whereas age at assessment and its interaction with GA contributed robustly to LC1 in the control group (Fig. \ref{fig:PLS_CAPs}A). CAP occurrence saliences show that internally oriented networks such as the DMN have a positive weight in the relationship uncovered by LC1, while externally oriented networks (e.g., language, visual) are negatively weighted (Fig. \ref{fig:PLS_CAPs}B). The correlation plot between brain scores and age shows that this relationship is altered in preterm-born young adolescents as compared to their fullterm peers (Fig. \ref{fig:PLS_CAPs}C). Specifically, brain scores start lower for the VPT group at the age of 10, but increase at a higher pace than for the control group, eventually surpassing it. 
+\subsubsection*{Altered trajectories of ACC-CAPs over time in preterm-born young adolescents} We then tested whether there were significant interplays between the six CAPs that were expressed differently between the two groups over time. To this end, we employed a PLSC analysis including the total number of occurrences per CAP and the life course measures. We found one significant latent component (LC1, $p~=~0.001$) as shown in Figure \ref{fig:PLS_var}. Life course weights for LC1  indicate robust weights of gestational age (GA), age at assessment and an interaction of the two for preterm young adolescents, whereas age at assessment and its interaction with GA contributed robustly to LC1 in the control group (Fig. \ref{fig:PLS_CAPs}A). CAP occurrence saliences show that internally oriented networks such as the DMN have a positive weight in the relationship uncovered by LC1, while externally oriented networks (e.g., language, visual) are negatively weighted (Fig. \ref{fig:PLS_CAPs}B). The correlation plot between brain scores and age shows that this relationship is altered in preterm-born young adolescents as compared to their fullterm peers (Fig. \ref{fig:PLS_CAPs}C). Specifically, brain scores start lower for the VPT group at the age of 10, but increase at a higher pace than for the control group, eventually surpassing it. 
 
 
 
 \begin{figure}[h]
 \centering\includegraphics[width=1\linewidth]{Ch3/Fig4_CAPs_PLS_results_20200218.pdf}
-\caption{\textbf{Altered trajectory of ACC-CAPs development over time in preterm-born young adolescents.} Partial least squares correlation between CAP occurrence and age-related measures lead to one significant latent component ($p~=~0.001$).   A)~Environment weights for LC1  indicate robust weights of gestational age (GA), age at assessment and an interaction of the two for preterm young adolescents (red bars), whereas age at assessment and its interaction with GA contributed robustly to LC1 in the control group (blue bars); blue bars represent fullterm controls. B)~CAP occurrence saliences show that internally oriented networks have a positive weight in the relationship uncovered by LC1, while externally oriented networks (e.g., language, visual) have a negative weight.  C)~The correlation plot between brain scores and age shows the different trajectories of CAP occurrence across age in the two groups.} \label{fig:PLS_CAPs}
+\caption{\textbf{Altered trajectory of ACC-CAPs development over time in preterm-born young adolescents.} Partial least squares correlation between CAP occurrence and age-related measures lead to one significant latent component ($p~=~0.001$).   A)~Life course measures' weights for LC1  indicate robust weights of gestational age (GA), age at assessment and an interaction of the two for preterm young adolescents (red bars), whereas age at assessment and its interaction with GA contributed robustly to LC1 in the control group (blue bars); blue bars represent fullterm controls. B)~CAP occurrence saliences show that internally oriented networks have a positive weight in the relationship uncovered by LC1, while externally oriented networks (e.g., language, visual) have a negative weight.  C)~The correlation plot between brain scores (subject-wise weighted average of CAP occurrences, based on brain saliences as weights) and age shows the different trajectories of CAP occurrence across age in the two groups.} \label{fig:PLS_CAPs}
 \end{figure}
 
 
@@ -159,8 +159,8 @@ This study investigated dynamic features of brain activity and connectivity in p
 
 
 \paragraph{Altered BOLD variability evolution in the Very Preterm}
-BOLD variability is broadly altered in the preterm group, for which we found a negative effect of age as compared to a positive effect within the control group (Fig. \ref{fig:PLS_var}A). Of note, the pattern of alterations includes large parts of the DMN such as the medial prefrontal cortex and the posterior prefrontal cortex. \cite{Garrett2011} found differences in a similar set of regions when studying BOLD variability in healthy adults during the performance of a task, with the elderly, low performing group showing decreased variability. Importantly, the posterior cingulate cortex and precuneus have been singled-out as functional and structural network hubs, linked to theory-of-mind and self-referential processes \citep{Spreng2009,VandenHeuvel2013}, both of which are affected in the preterm-born\cite{} \add{add reference}. In pre-adolescents, a recent study in normative functional connectivity development found that FC within the DMN was anti-correlated with age and cognitive performance \citep{Jiang2018}. The increase in BOLD variability with age in the same regions in our fullterm group aligns with the idea that variability at the right level is necessary to yield a greater dynamic range and complexity, allowing flexibility in brain function and connectivity \citep{McIntosh2010,Deco2011,Garrett2013b}.
-Along these lines, development of variability seen in the preterm group may be linked to other functional and behavioural alterations seen in this group. For instance, exacerbated variability in the medial prefrontal cortex in ADHD patients aged 9.91$\pm$1.24 (as compared to typically developing children) is strongly correlated with the severity of ADHD symptoms and inattention \citep{Nomi2018}. The positive effect of the interaction between gestational age and age in our preterm group shows a similar relationship between BOLD variability and prematurity in our younger preterms (Fig. \ref{fig:PLS_var}A, B). In particular, the fact that variability is higher in the preterm group at an early age and gradually decreases past the fullterm point may indicate a compensation mechanism that overshoots, and thus does not reach ideal levels (e.g., comparable to typically developing controls) within this period of life. It would be interesting to follow up this study with a BOLD variability analysis in preterm-born adults to check if, like with other brain measures and behavioural traits, the alterations last throughout life.
+BOLD variability is broadly altered in the preterm group, for which we found a negative effect of age as compared to a positive effect within the control group (Fig. \ref{fig:PLS_var}A). Of note, the pattern of alterations includes large parts of the DMN such as the medial prefrontal cortex and the posterior prefrontal cortex. \cite{Garrett2011} found differences in a similar set of regions when studying BOLD variability in healthy adults during the performance of a task, with the elderly, low performing group showing decreased variability. Importantly, the posterior cingulate cortex and precuneus have been singled-out as functional and structural network hubs, linked to theory-of-mind and self-referential processes \citep{Spreng2009,VandenHeuvel2013}, both of which are affected in the preterm-born \citep{Papini2016,Witt2018}. In pre-adolescents, a recent study in normative functional connectivity development found that FC within the DMN was anti-correlated with age and cognitive performance \citep{Jiang2018}. The increase in BOLD variability with age in the same regions in our fullterm group aligns with the idea that variability at the right level is necessary to yield a greater dynamic range and complexity, allowing flexibility in brain function and connectivity \citep{McIntosh2010,Deco2011,Garrett2013b}.
+Along these lines, development of variability seen in the preterm group may be linked to other functional and behavioural alterations seen in this group. For instance, exacerbated variability in the medial prefrontal cortex in ADHD patients aged 9.91$\pm$1.24 (as compared to typically developing children) is strongly correlated with the severity of ADHD symptoms and inattention \citep{Nomi2018}. The positive effect of the interaction between gestational age and age in our preterm group shows a similar relationship between BOLD variability and prematurity in our younger preterms (Fig. \ref{fig:PLS_var}A, B). In particular, the fact that variability is higher in the preterm group at an early age and gradually decreases past the fullterm point may indicate a compensation mechanism that overshoots, and thus does not reach ideal levels (e.g., comparable to typically developing controls) within this period of life. Note that although there was a coincidental weak correlation between gestational age and age at assessment in the preterm group (Supplementary Figure \ref{fig:ch3_GAvsAge}), we do not expect this to have had a large effect in the results. It would be interesting to follow up this study with a BOLD variability analysis in preterm-born adults to check if, like with other brain measures and behavioural traits, the alterations last throughout life.
 
 The pattern of BOLD variability alterations includes other brain regions such as the bilateral hippocampus/amygdala and the insula – areas involved in a variety of functions ranging from affective processing to higher level cognition \citep{Uddin2018}. These regions have been previously found to be affected in the young preterm population, with accounts of altered developmental trajectories \citep{Thompson2014}, volumetry \citep{Chau2019}, and function \citep{Nosarti2006}. In general, our results agree with research showing that insular BOLD variability increases linearly with age in the resting state \citep{Nomi2018} in typically developing individuals, and show that this trajectory is altered in the preterm group. In our group comparison, there was no evidence of the previously found cortical-subcortical dichotomy in which BOLD variability increases with age in subcortical areas as opposed to cortical areas \citep{Garrett2013b}. This may be partly due to the fact that Garrett's study was performed using a task-based design. More importantly, PLSC extracts the multivariate pattern that most differentiates the two groups, suggesting a complex pattern of development alterations in the preterm group.
 
@@ -171,6 +171,8 @@ To further understand the effects of BOLD variability and relate it to conventio
 
 Interestingly, the combinations of patterns whose co-occurrence with the ACC found in our CAPs analysis reveals a dichotomy between the occurrences of internally- (i.e., DMN, mPFC) versus externally-oriented (i.e., DAN, visual) networks \citep{Zabelina2016}. Internally-oriented cognition comprises creative thinking; making social inferences; prospection; and mind-wandering \citep{Zabelina2016, Buckner2019}. Networks which support externally-oriented cognition, in turn, are typically involved in language; visual; and somatosensory tasks, attention regulation, and are usually positively correlated at rest \citep{Lee2012}, in line with our results. A study on resting-state functional connectivity including young adolescents aged 10--16 found that very preterm participants showed weaker connectivity in externally-oriented networks such as the visual and DAN \citep{Wehrle2018}. The results considered the groups in a categorical way, but includes a slightly older population than ours. This could explain the finding of a weaker task-oriented network connectivity in preterm as compared to controls, which in line with what is seen in our older participants. This weakened connectivity has also been found in adult preterm-born individuals aged 28 and above \citep{White2014}. Our study thus provides complementary insight into the trajectory of the differences seen between the two groups, and suggests that the disconnectivity seen in later life stages may be related to faulty compensation mechanisms that start during the highly dynamic age range of early adolescence.
 
+\subsubsection*{Study considerations}
+While we discuss the development of dynamic features during young adolescence, the measures at different ages were acquired by different individuals. Given that this is a stage in life in which the brain is in full blown development and that there is high heterogeneity in the clinical outcomes of preterm infants, it would have been ideal to perform repeated measures in the same participants in a longitudinal study. Moreover, it has been shown that extremely preterm-born individuals (<28 weeks of gestational age) tend to be less resilient and therefore more likely to present brain abnormalities. Here, we grouped extremely and very (28---31 weeks) preterm-born individuals together. Subsequent analyses should take this into consideration by looking for effects that are specific to each of these groups.
 
 \subsubsection*{Conclusions}
 Our study shows for the first time that the trajectory of BOLD signal variability development is altered in young adolescents born prematurely, and that these alterations follow a broad spatial pattern in the brain comprising regions previously found to be affected by preterm birth. The previous implication of the brain areas observed in our study in preterm birth and cognitive performance suggests exploring the relationship between the development of BOLD signal variability and behavioural outcomes as a promising avenue for further research. In addition, we explored the development of dynamic functional connectivity in this populating by examining how the interplay between different multivariate co-activation patterns changes with age. We found that the change in the balance between  internally- and externally-oriented networks across age is more accentuated in the preterm group. Taken together, our observations suggest that the preterm-born brain triggers neurological compensation mechanisms that start during the highly dynamic age range of early adolescence and fail to find an optimal balance. 
