Missing only interpretation of chapter 4.2

--- a/main/ch3_BOLDvar.tex
+++ b/main/ch3_BOLDvar.tex
@@ -117,7 +117,7 @@ Figure \ref{fig:PLS_var} shows the brain and life course saliences for the signi
 
 
 \begin{figure}[h!] 
-\centering\includegraphics[width=1\linewidth]{Ch3/Fig2_PLS_var_LC1_20200205.pdf}
+\centering\includegraphics[width=1\linewidth]{images/Ch3/Fig2_PLS_var_LC1.png}
 \caption{\textbf{BOLD variability and its link to life course measures.} Partial least squares correlation (PLSC) results for BOLD variability and life course measures for preterm-born young adolescents and fullterm-born controls.  A)~Life course measures' weights for latent component (LC) 1. GA = Gestational Age. Error bars correspond to bootstrapping 5th--95th percentiles. B)~Brain weights for LC 1. Numbers on the top left of each slice correspond to planes in Montreal Neurological Institute coordinates. C)~Correlations between brain scores (subject-wise weighted average of BOLD variability maps, with the Brain Saliences as weights) and age at assessment in the two groups. For this plot, brain scores (Lx) were calculated using brain data normalised across all participants (as opposed to within-group), to allow group baselines to be compared. Each bubble's size is proportional to the corresponding subject's GA. %an eventual group effect in the baseline (typically ignored by PLS analyses) could have been identified
 }. \label{fig:PLS_var} \vspace{-0.5cm}
 \end{figure}
@@ -146,7 +146,7 @@ Out of the brain areas highlighted in our BOLD variability analysis' results, th
 
 
 \begin{figure}[h]
-\centering\includegraphics[width=1\linewidth]{Ch3/Fig4_CAPs_PLS_results_20200218.pdf}
+\centering\includegraphics[width=1\linewidth]{images/Ch3/Fig4_CAPs_PLS_results.png}
 \caption{\textbf{Altered trajectory of ACC-CAPs development over time in preterm-born young adolescents.} Partial least squares correlation between CAP occurrence and age-related measures lead to one significant latent component ($p~=~0.001$).   A)~Life course measures' weights for LC1  indicate robust weights of gestational age (GA), age at assessment and an interaction of the two for preterm young adolescents (red bars), whereas age at assessment and its interaction with GA contributed robustly to LC1 in the control group (blue bars); blue bars represent fullterm controls. B)~CAP occurrence saliences show that internally oriented networks have a positive weight in the relationship uncovered by LC1, while externally oriented networks (e.g., language, visual) have a negative weight.  C)~The correlation plot between brain scores (subject-wise weighted average of CAP occurrences, based on brain saliences as weights) and age shows the different trajectories of CAP occurrence across age in the two groups.} \label{fig:PLS_CAPs}
 \end{figure}
 
