--- a/main/ch4_ORFi.tex
+++ b/main/ch4_ORFi.tex
@@ -246,7 +246,7 @@ In addition to being separate from inhibition processes, ORFi also needs to be d
 
 Given the crucial importance of ORFi for the correct adaptation of behavioural demands in everyday life, it is of major interest to better investigate what is the impact of a deficit in this mechanism in other clinical populations characterised by lesions or atypical development in the OFC region. One promising field of research concerns schizophrenia, a psychiatric condition associated with loss of grey matter in this region. Indeed, recent studies showed that an abnormal ORFi activation can be an early biomarker of schizophrenia spectrum disorder \citep{Theze2019}. Another population characterised by specific alteration in the OFC region is preterm-born children \citep{Gimenez2006}. Up to now, no studies assessing the function of the OFC in the context of preterm birth have been done. Future research should address this point, using the paradigm assessing ORFi as a reliable task to explore OFC functions in premature children and adolescents. 
 
-\subsection{Conclusion}
+\subsection*{Conclusion}
 
 This research investigated for the first time using fMRI technique the neural correlates of orbitofrontal reality filtering in early adolescents. Results showed that, as in adults, the orbitofrontal cortex is involved in filtering memories and thoughts according to their relevance to the present in this young population. 
 
@@ -428,7 +428,7 @@ BOLD signal in the OFC was stronger in general during the second run independent
  As described before, a ceiling effect in the participants from both groups' responses, such that nearly no mistakes were ever made, preventing us from being able to investigate potential correlations between brain activation and accuracy levels. This effect may have been due to the fact that we used the same task that had been described as used for children from 7 years of age. It is thus possible that we have missed higher activation of regions involved in the processing of this task. Future studies involving young adolescents should thus increase the difficulty of the task by methods such as increasing the number of trials, shortening the time for individual trials, and / or adding different types of distractor elements (\textit{e.g.}, images never repeated during Run 1 that reappear during Run 2, and images that appear for the first time in Run 2). Although there is room for improvement, this study sheds important light into differences between reality filtering processing in individuals born preterm or at term and presents avenues for future research.
 %The fact that both runs of the experiment use the same set of images means that Reality Filtering-specific results may be confounded by brain activations caused by performing the exercise a second time. We believe this is not a significant problem since, at the time the second run starts, all images have been seen for the exact number of times, and the goal during this run is different from the first one. Nonetheless, future studies should include a set of images that are never repeated during the first run, but only repeated during the second run. 
 
-\subsection{Conclusion}
+\subsection*{Conclusion}
 In this study, we investigated the neurological underpinnings of a reality filtering task performance in young adolescents born prematurely as compared to their term-born peers. We identified differences in activation in the two groups while performing the two steps of the task and framed them within previous knowledge on preterm birth and reality filtering processing. Our results corroborate the idea that compensatory mechanisms are in place to make up for preterm birth-related difficulties, allowing individuals to perform functional tasks. Such results may be used as biomarkers for future studies on potential interventions to help this population. 
 
 
