--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -2044,6 +2044,20 @@ volume = {31},
 year = {2010}
 }
 
+
+@article{Hansen2015,
+author = {Hansen, Enrique C.A. and Battaglia, Demian and Spiegler, Andreas and Deco, Gustavo and Jirsa, Viktor K.},
+doi = {10.1016/j.neuroimage.2014.11.001},
+issn = {10538119},
+journal = {NeuroImage},
+month = {jan},
+pages = {525--535},
+title = {{Functional connectivity dynamics: Modeling the switching behavior of the resting state}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/S1053811914009033},
+volume = {105},
+year = {2015}
+}
+
 @incollection{Harnishfeger1995,
 author = {Harnishfeger, Katherine Kipp},
 booktitle = {Interference and Inhibition in Cognition},
@@ -2138,6 +2152,19 @@ volume = {123},
 year = {2009}
 }
 
+@article{Honey2009,
+author = {Honey, C. J. and Sporns, O. and Cammoun, L. and Gigandet, X. and Thiran, J. P. and Meuli, R. and Hagmann, P.},
+doi = {10.1073/pnas.0811168106},
+issn = {0027-8424},
+journal = {Proceedings of the National Academy of Sciences},
+month = {feb},
+number = {6},
+pages = {2035--2040},
+title = {{Predicting human resting-state functional connectivity from structural connectivity}},
+url = {http://www.pnas.org/lookup/doi/10.1073/pnas.0811168106},
+volume = {106},
+year = {2009}
+}
 
 @article{Hornman2016,
 author = {Hornman, Jorijn and {De Winter}, Andrea F. and Kerstjens, Jorien M. and Bos, Arend F. and Reijneveld, Sijmen A.},
